// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Introspector relation with inline relation column 1`] = `
"type Bill @pgTable(name: \\"bill\\") {
  id: Int! @unique
  bill: String!
  product_id: Product
}

type Product @pgTable(name: \\"product\\") {
  id: Int! @unique
  bill: Bill
  description: String!
}"
`;

exports[`Introspector relation with inline relation column NOT NULL 1`] = `
"type Bill @pgTable(name: \\"bill\\") {
  id: Int! @unique
  bill: String!
  product_id: Product!
}

type Product @pgTable(name: \\"product\\") {
  id: Int! @unique
  bill: Bill!
  description: String!
}"
`;

exports[`Introspector relation with relation table 1`] = `
"type Bill @pgTable(name: \\"bill\\") {
  id: Int! @unique
  bill: String!
  product: [Product]
}

type Product @pgTable(name: \\"product\\") {
  id: Int! @unique
  bill: [Bill]
  product: String!
}"
`;

exports[`Introspector relation with relation table with extra column 1`] = `
"type Bill @pgTable(name: \\"bill\\") {
  id: Int! @unique
  bill: String!
  bill_product: Bill_product
}

type Bill_product @pgTable(name: \\"bill_product\\") {
  bill_id: Bill
  product_id: Product
  some_other_column: String!
}

type Product @pgTable(name: \\"product\\") {
  id: Int! @unique
  bill_product: Bill_product
  product: String!
}"
`;
